# tetra

./: .gitignore  CMakeLists.txt  GoogleUndocumentedTranslator.py  README.md  tetra.py
py_translator/: GoogleUndocumentedTranslator.py
translator/: HttpHelper.cpp  HttpHelper.h  Translator.cpp  Translator.h
translator/google_undocumented/: GoogleUdApiWrapper.cpp  GoogleUdApiWrapper.h
